# ccmemory

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  ccmemory.code-workspace  docker-compose.yml  marketplace.json  pyproject.toml  pytest.ini  setup.sh
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: publish.yml
dashboard/: Dockerfile  app.py  requirements.txt
dashboard/templates/: dashboard.html  detailpage.html
doc/: AS_BUILT.md  DASHBOARD.md  DEVELOPMENT.md  EVENT_GRAPH_PLAN.md  GRAPH_PLAN.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SPEC.md  NEO4J_COOKBOOK.md  PROJECT_VISION.md  TELEMETRY.md  TODO.md  UNIVERSAL_CONTEXT_GRAPH.md  WHY_GRAPH.md
doc/brainstorming/: 0-CLR--OVERVIEW.md  1-CLR--RCA.md  2-CLR--E2E.md  2-CLR--SYNTHESIS.md  (+4 more)
docker/: docker-compose.yml
examples/: doc-index-example.md
hooks/: activity_log.sh  ensure-running.sh  hooks.json  message_response.py  message_response.sh  prompt_submit.sh  session_end.py  session_end.sh  session_start.py  session_start.sh
mcp-server/: Dockerfile  README.md  init.cypher  pyproject.toml
mcp-server/src/ccmemory/: __init__.py  __main__.py  activitylog.py  backfill.py  cli.py  context.py  embeddings.py  graph.py  hooks.py  llmprovider.py  reranker.py  server.py
mcp-server/src/ccmemory/detection/: __init__.py  detector.py  prompts.py  schemas.py
mcp-server/src/ccmemory/tools/: __init__.py  backfill.py  logging.py  query.py  record.py  reference.py
mcp-server/tests/unit/: test_llmprovider.py
prompts/: analyze-message.md
scripts/: check-triggers.sh  install.py  install.sh  load-memory.sh  log-session.py  save-memory.sh  seed_data.py  start.sh  stop.sh
templates/: CLAUDE-template.md  claude-md-snippet.md  decisions-log.md  doc-index.md  insights-template.md  session-template.md
tests/: conftest.py
(+14 files in other folders)
