[project]
name = "ccmemory-workspace"
version = "0.1.0"
description = "Development workspace for ccmemory"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
    "neo4j>=5.0.0",
    "gevent>=23.0.0",
    "gevent-websocket>=0.10.1",
    "requests>=2.31.0",
    "debugpy>=1.8.0",
    "ccmemory",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dashboard"]

[tool.uv.sources]
ccmemory = { path = "./mcp-server", editable = true }
